<resources>
    <string name="app_name">CadavreExquis</string>

    <!-- text diver  -->
    <string name="Titre">CREER UNE PARTIE</string>
    <string name="Nom">Nom</string>
    <string name="Type">Type</string>
    <string name="Manche">Manche</string>
    <string name="Joueur">Joueur</string>
    <string name="Theme">Theme</string>
    <string name="Langue">Langue</string>
    <string name="Confidentialite">Confidentialite</string>
    <string name="aide">"?"</string>



    <!-- Bouton  -->
    <string name="Inviter">Inviter</string>
    <string name="plus">+</string>
    <string name="moins">-</string>
    <string name="annuler">Annuler</string>
    <string name="creer">Creer</string>
    <string name="FormePhrase">Forme de la phrase</string>



    <!-- message  -->
    <string name="NomPartieVide">Veuillez saisir un nom de partie</string>
    <string name="aideTitre">💀Aide💀</string>
    <string name="aideMessage">☠TODO à définir🐲\nCar je ne sais pas encore quoi y écrire🤔, du coup j\'écris ce qu\'il faudra faire🙂, et ce qui me passe par l\'esprit afin de combler le vide🙄.\nMais aussi pour faire plus réaliste!\n 😁</string>




    <!-- Liste des types de partie -->
    <string-array name="typesPartie">
        <item>"Rapide"</item>
        <item>"Classique"</item>
        <item>"Longue"</item>
        <item>"Interminable"</item>
        <item>"Personnalisée"</item>
    </string-array>
    <string-array name="typesPartieNb">
        <item>"2"</item>
        <item>"5"</item>
        <item>"10"</item>
        <item>"20"</item>
    </string-array>

    <!-- Liste thèmes -->
    <string-array name="themes">
        <item>"Aucun"</item>
        <item>"Animaux"</item>
        <item>"Beauf"</item>
        <item>"Sexe"</item>
    </string-array>

    <!-- Liste langues -->
    <string-array name="langues">
        <item>"Allemand"</item>
        <item>"Anglais"</item>
        <item>"Espagnol"</item>
        <item>"Français"</item>
    </string-array>

    <!-- Liste règles de confidentialité -->
    <string-array name="confidentialites">
        <item>"Publique"</item>
        <item>"Amis uniquement"</item>
    </string-array>

    <!-- Boîte dialogue ajout ami -->
    <string name="titre_invitation">Inviter des amis</string>
    <string name="btn_valider_invitation">Valider</string>
    <string name="btn_retour_invitation">Retour</string>

    <!-- Liste des amis -->
    <string-array name="amis">
        <item>"Jean-Paul"</item>
        <item>"Jean-Michel"</item>
        <item>"Jean-Patrick"</item>
    </string-array>

    <!-- Boîte dialogue -->
    <string name="titre_forme_phrase">Forme phrase</string>
    <string name="titre_section">Section</string>
    <string name="titre_definition">Définition</string>

    <string-array name="definition_elements_phrase">
        <item>"L'être vivant ou l'objet concerné par la phrase"</item>
        <item>"L'action réalisée par le sujet"</item>
        <item>"Le sujet fait 'qui' ou 'quoi'"</item>
        <item>"Le sujet fait 'à qui' ou 'à quoi'"</item>
    </string-array>

    <string-array name="elements_phrase">
        <item>"Sujet"</item>
        <item>"Verbe"</item>
        <item>"COD"</item>
        <item>"COI"</item>
    </string-array>

</resources>
