<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1,2,3"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marging"
        android:gravity="center"
        android:text="@string/Titre" />

    <Button
        android:id="@+id/bpAide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aide" />

    <TableRow>

        <TextView android:text="@string/Nom"
            style="@style/text"/>

        <EditText
            android:id="@+id/saisieNom"
            android:layout_span="3"
            android:maxLength="15"
            android:singleLine="true" />

    </TableRow>


    <TableRow>

        <TextView android:text="@string/Type"
            style="@style/text"/>

        <Spinner
            android:id="@+id/spinTypePartie"
            android:layout_span="3"
            android:maxLength="15" />

    </TableRow>

    <TableRow>

        <TextView android:text="@string/Manche"
            style="@style/text"/>
        <Button
            android:id="@+id/bpManchesMoins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moins"
            android:layout_column="1"
            android:layout_span="1"/>

        <TextView
            android:id="@+id/txtManches"
            android:layout_span="1"
            android:layout_column="2"
            android:maxLength="15"
            android:singleLine="true" />
        <Button
            android:id="@+id/bpManchesPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:layout_column="3"
            android:layout_span="1"/>

    </TableRow>


    <TableRow>

        <TextView android:text="@string/Joueur"
            style="@style/text"/>
        <Button
            android:id="@+id/bpJoueursMoins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moins"
            android:layout_column="1"
            android:layout_span="1"/>

        <TextView
            android:id="@+id/txtJoueurs"
            android:layout_span="1"
            android:layout_column="2"
            android:maxLength="15"
            android:singleLine="true" />
        <Button
            android:id="@+id/bpJoueursPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:layout_column="3"
            android:layout_span="1"/>

    </TableRow>

    <TableRow>


        <Button
            android:id="@+id/bpFormePhrase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FormePhrase"
            android:layout_column="1"
            android:layout_span="3"/>


    </TableRow>

    <TableRow>

        <TextView android:text="@string/Theme"
            style="@style/text"/>

        <Spinner
            android:id="@+id/spinTheme"
            android:layout_span="3"
            android:maxLength="15" />

    </TableRow>

    <TableRow>

        <TextView android:text="@string/Langue"
            style="@style/text"/>

        <Spinner
            android:id="@+id/spinLangue"
            android:layout_span="3"
            android:maxLength="15"/>

    </TableRow>


    <TableRow>

        <TextView android:text="@string/Confidentialite"
            style="@style/text"  />

        <Spinner
            android:id="@+id/spinConfidentialite"
            android:layout_span="3"
            android:maxLength="15" />

    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/bpInviter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Inviter"
            android:layout_column="0"
            android:layout_span="1"/>

        <TextView
            android:id="@+id/txtAmis"
            android:layout_span="3"
            android:maxLength="15"
            android:singleLine="true" />

    </TableRow>


    <TableRow>

        <Button
            android:id="@+id/bpAnnuler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/annuler"
            android:layout_column="0"
            android:layout_span="1"/>

        <Button
            android:id="@+id/bpCreer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creer"
            android:layout_column="2"
            android:layout_span="2"/>

    </TableRow>



</TableLayout>